ft_containers-unit-test/logs.txt
../map_tests/find().cpp:31:43: error: no member named 'find' in 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >'
    typename _map<T, V>::iterator it = mp.find(34 * _ratio);
                                       ~~ ^
../map_tests/find().cpp:46:59: note: in instantiation of function template specialization 'find_test<int, int>' requested here
    exit(run_map_unit_test<int, int>("find()", find_test, find_test));
                                                          ^
1 error generated.
n 'ft::map<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >'
    v.push_back(mp.count(0));
                ~~ ^
2 errors generated.
se -v to see invocation)
